# squifi

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  package.json
client/src/: inner.rs  lib.rs
docs/: idea.md
fund/: Cargo.toml
fund/src/: error.rs  lib.rs
fund/src/accounts/: fund.rs  mod.rs  vault.rs
old/fund/program/: Cargo.toml
old/fund/program/notes/: payback.md
old/fund/program/src/: close.rs  whitelist_add.rs
old/fund/src/: error.rs  lib.rs
program/: Cargo.toml
program/notes/: payback.md
program/src/: access_control.rs  close.rs  deposit.rs  entrypoint.rs  error.rs  init_payback.rs  initialize.rs  instruction.rs  instructions.rs  lib.rs  payback_deposit.rs  payback_init.rs  payback_withdraw.rs  processor.rs  register_payback.rs  state.rs  whitelist_add.rs  whitelist_delete.rs  withdraw.rs
programs/squifi/: Cargo.toml
programs/squifi/src/: lib.rs
refactor/: Anchor.toml
refactor/programs/squifi/src/: lib.rs
refactor/tests/: squifi.js
src/: error.rs  lib.rs  types.rs
src/accounts/: fund.rs  mod.rs  vault.rs  whitelist.rs
