[package]
name = "fund"
version = "0.1.0"
authors = ["Marko Baricevic <marbar3778@yahoo.com>"]
repository = "https://github.com/marbar3778/squad_finance"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
program = ["solana-client-gen/program", "spl-token/program", "serum-common/program"]
client = ["solana-client-gen/client", "spl-token/default", "serum-common/client", "lazy_static"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spl-token = "2.0.8"
num_enum = "0.5.0"
thiserror = "1.0.20"
serum-common = { git = "https://github.com/project-serum/serum-dex" }
solana-client-gen = { git = "https://github.com/project-serum/serum-dex" }

# Client only.
lazy_static = { version = "1.4.0", optional = true }
