[package]
name = "client"
version = "0.1.0"
authors = ["callum"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fund = {path = "../"}
serum-common = {git = "https://github.com/project-serum/serum-dex", features = ["program"]}
solana-client = "1.4.5"
solana-sdk = "1.4.5"
