[package]
authors = ["Marko Baricevic <marbar3778@yahoo.com>"]
edition = "2018"
name = "fund-program"
repository = "https://github.com/marbar3778/squad_finance"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "fund_program"

[features]
program = ["spl-token/program", "spl-token/no-entrypoint", "fund/program"]

[dependencies]
fund = {path = "../fund"}
serum-common = {git = "https://github.com/project-serum/serum-dex", features = ["program"]}
solana-program = {version = "1.4.5", default-features = false}
spl-token = {version = "2.0.6", default-features = false}
